--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
-[functions]
-node_bundler = "esbuild"
+[build]
+  command = "npm install && npm run build"
+  publish = "build"
 
 [[redirects]]
-from = "/api/*"
-to = "/.netlify/functions/api"
-status = 200
+  from = "/*"
+  to = "/.netlify/functions/server"
+  status = 200
